--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,13 @@ dependencies {
     implementation 'io.supercharge:shimmerlayout:2.1.0'
     implementation 'com.github.appitiza:SignatureApp:-SNAPSHOT'
     implementation 'com.github.bumptech.glide:glide:4.13.1'
+
+
+
+
+    def lifecycle_version = "2.5.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
   
 }
