--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,9 @@ dependencies {
 
 
 
-    def lifecycle_version = "2.5.0-rc01"
+    def lifecycle_version = "2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+   implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
   
 }
